<resources>
    <string name="maps_api_key">AIzaSyBHDRUTnuExNg59HWsGYUSK0BS9zBTVKjM</string>
    <string name="app_name">SeeRem: Supervisor</string>
    <string name="welcome_text">Supervisor</string>
    <string name="login_help">Please enter your Username and Password</string>
    <string name="username_entry">Username:</string>
    <string name="password_entry">Password:</string>
    <string name="login_button">Login</string>
    <string name="error_no_username">Please enter a Username.</string>
    <string name="error_no_password">Please enter a Password.</string>
    <string name="error_wrong_password">Incorrect password for this username.</string>
    <string name="login_no_username_found">Username not found in Supervisor database!</string>
    <string name="fetching_data_message">Downloading your data…</string>
    <string name="logging_in_title">Logging In</string>
    <string name="user_info_header">User Info</string>
    <string name="fill_in_emergency_info">Fill in emergency information!</string>
    <string name="name_entry">First and Last name</string>
    <string name="first_name_entry">First name</string>
    <string name="last_name_entry">Last name</string>
    <string name="id_entry">ID (driver licence or company ID)</string>
    <string name="medical_considerations_entry">Medical considerations</string>
    <string name="emergency_contact_entry">Emergency Contact</string>
    <string name="emergency_contact_name_entry">Name</string>
    <string name="emergency_contact_number_entryy">Phone Number</string>
    <string name="emergency_contact_type_family">Family</string>
    <string name="emergency_contact_type_friend">Friend</string>
    <string name="go_to_ui_preferences_button">UI Preferences</string>
    <string name="go_to_worksite">Worksite(s)</string>
    <string name="save_user_info_button">Save User Info</string>
    <string name="error_userinfo_incomplete">All parts of your profile information must be filled.</string>
    <string name="user_info_save_success">Your settings have been successfully saved.</string>
    <string name="user_info_save_fail">Failed to save your settings.</string>
    <string name="new_user_prompt">Welcome! Please enter and submit the information here for use at SEEDA.</string>
    <string name="map_noServices_error_message">No services available!</string>
    <string name="unable_getting_current_location">Unable to get your current location!</string>
    <string name="map_info_window_user_location_snippet">This is my current location!</string>
    <string name="map_info_window_user_location_title">My Location</string>
    <string name="map_info_window_site_location_title">Site Location</string>
    <string name="map_info_window_worker_location_title">Worker Location</string>
    <string name="map_info_window_masterpoint_title">Master Point</string>
    <string name="map_info_window_masterpoint_snippet">Go here in case of emergency!</string>
    <string name="map_info_window_siteName">Site Name: </string>
    <string name="map_info_window_siteID">Site ID: </string>
    <string name="map_info_window_projectID">Project ID: </string>
    <string name="map_info_window_hours">Hours: </string>
    <string name="map_info_window_hse">HSE Link: </string>
    <string name="map_info_window_employeeID">Employee ID: </string>
    <string name="map_info_window_fullName">Full name:</string>
    <string name="map_info_window_companyID">Company: </string>
    <string name="map_info_window_supervisorID">Supervisor: </string>
    <string name="fixed_siteID">Site ID</string>
    <string name="fixed_projectID">Project ID</string>
    <string name="fixed_location">Location</string>
    <string name="fixed_operationHours">Hours</string>
    <string name="fixed_displaying_header">Displaying:</string>
    <string name="fixed_workerID">Worker ID</string>
    <string name="fixed_firstName">First Name</string>
    <string name="fixed_lastName">Last Name</string>
    <string name="fixed_worksite">Worksite</string>
    <string name="fixed_skills">Skills</string>
    <string name="fixed_supervisor">Supervisor</string>
    <string name="fixed_employeeID">ID</string>
    <string name="fixed_additionalInfo">Additional Information ></string>
    <string name="fixed_hseLink">HSE Link:</string>
    <string name="fixed_masterPoint">Master Point</string>
    <string name="fixed_siteName">Site Name:</string>
    <string name="fixed_availability">Availability</string>
    <string name="fixed_additional_info_for">Additional Information for:</string>
    <string name="fixed_monday">Monday</string>
    <string name="fixed_tuesday">Tuesday</string>
    <string name="fixed_wednesday">Wednesday</string>
    <string name="fixed_thursday">Thursday</string>
    <string name="fixed_friday">Friday</string>
    <string name="fixed_saturday">Saturday</string>
    <string name="fixed_sunday">Sunday</string>
    <string name="dash"> - </string>
    <string name="fixed_total_hours">Total Hours:</string>
    <string name="fixed_overtime_hours">Overtime Hours:</string>
    <string name="fixed_emergency_info">Emergency Info</string>
    <string name="fixed_blood_group">Blood Group:</string>
    <string name="fixed_medical_condition">Medical Condition:</string>
    <string name="fixed_contact_person">Contact Person:</string>
    <string name="fixed_contact_number">Contact Number:</string>
    <string name="fixed_relationship">Relationship:</string>
    <string name="search_input_hint_map">Search for workers or sites</string>
    <string name="search_here">Search here!</string>
    <string name="clear_search_input_hint">Clear search</string>
    <string name="search_result_all_workers">Search Results: All Workers</string>
    <string name="search_display_all_workers">Search: All Workers</string>
    <string name="search_result_all_worksites">Search Results: All Worksites</string>
    <string name="search_display_all_worksites">Search: All Workers</string>
    <string name="no_worksites_found">No Worksites Found!</string>
    <string name="no_workers_found">No Workers Found!</string>
    <string name="no_result_found">No Results Found!</string>
    <string name="communication_header">Communication</string>
    <string name="communication_help">Select communication method for:</string>
    <string name="employee_last_name_first_name">%1$s, %2$s</string>
    <string name="communication_no_employee">General Company Communication Channels</string>
    <string name="communication_phone">PHONE</string>
    <string name="communication_no_phone">(No Phone #)</string>
    <string name="communication_email">EMAIL</string>
    <string name="communication_no_email">(No Email)</string>
    <string name="communication_other_link">NO LINK</string>
    <string name="communication_no_link">(No communication links available)</string>
    <string name="communication_google_meet">Google MEET</string>
    <string name="communication_no_google_meet">(No MEET contact)</string>
    <string name="communication_google_meet_exists">MEET linked</string>
    <string name="communication_microsoft_teams">Microsoft TEAMS</string>
    <string name="communication_no_microsoft_teams">(No TEAMS contact)</string>
    <string name="communication_microsoft_teams_exists">TEAMS linked</string>
    <string name="communications_skype">Skype</string>
    <string name="communications_no_skype">(No Skype contact)</string>
    <string name="communications_skype_exists">Skype linked</string>
    <string name="communication_zoom">Zoom</string>
    <string name="communication_no_zoom">(No Zoom link)</string>
    <string name="communication_zoom_exists">Zoom link exists</string>
    <string name="worker_navigation_bar_text">Worker</string>
    <string name="site_navigation_bar_text">Sites</string>
    <string name="map_navigation_bar_text">Map</string>
    <string name="sensor_navigation_bar_text">Sensors</string>
    <string name="user_navigation_bar_text">Me</string>
    <string name="refresh_all_data">Refreshing All Data!</string>
    <string name="please_wait">Please Wait!</string>
    <string name="refresh">Refresh</string>
    <string name="display_all_workers">Display All Workers</string>
    <string name="display_my_workers">Display My Workers</string>
    <string name="display_all_worksites">Display All Worksites</string>
    <string name="display_my_worksites">Display My Worksites</string>
    <string name="display_offline_workers">Display Offline Workers</string>
    <string name="display_online_workers">Display Online Workers</string>
    <string name="display_offline_worksites">Display Offline Worksites</string>
    <string name="display_online_worksites">Display Online Worksites</string>
    <string name="no_offline_workers">No Offline Workers</string>
    <string name="no_online_workers">No Online Workers</string>
    <string name="no_offline_worksites">No Offline Worksites</string>
    <string name="no_online_worksites">No Online Worksites</string>
    <string name="company_offline_workers">Company Offline Workers</string>
    <string name="my_offline_workers">My Offline Workers</string>
    <string name="company_online_workers">Company Online Workers</string>
    <string name="my_online_workers">My Online Workers</string>
    <string name="company_offline_worksites">Company Offline Worksites</string>
    <string name="my_offline_worksites">My Offline Worksites</string>
    <string name="company_online_worksites">Company Online Worksites</string>
    <string name="my_online_worksites">My Online Worksites</string>
    <string name="all_company_worksites">All Company Worksites</string>
    <string name="all_my_worksites">All My Worksites</string>
    <string name="sidebar_navigation_open">Open sidebar navigation drawer</string>
    <string name="sidebar_navigation_close">Close sidebar navigation drawer</string>
    <string name="user_sidebar_text">Me</string>
    <string name="overtime_sidebar_text">Add overtime</string>
    <string name="day_leave_sidebar_text">Add day leave</string>
    <string name="communication_sidebar_text">Communication</string>
    <string name="all_workers_sidebar_text">All workers</string>
    <string name="company_sidebar_text">Company</string>
    <string name="settings_sidebar_text">Settings</string>
    <string name="ui_prefs_sidebar_text">UI Preferences</string>
    <string name="light_dark_mode_sidebar_text">Theme</string>
    <string name="languages_sidebar_text">Languages</string>
    <string name="change_password_sidebar_text">Change password</string>
    <string name="log_out_sidebar_text">Log Out</string>
    <string name="sensorsUsageTextView">Device Sensor Values</string>
    <string name="sensorUsageExplanationTextView">The current Ambient Temperature and Pressure values detected by your device are:</string>
    <string name="temperatureTextView">Temperature</string>
    <string name="noTemperatureSensorTextView">(No Temperature sensor found)</string>
    <string name="pressureTextView">Pressure</string>
    <string name="noPressureSensorTextView">(No Pressure sensor found)</string>
    <string name="temperatureUnitsTextView">%1$.2f°C (Degrees Celsius)</string>
    <string name="pressureUnitsTextView">%1$.2f hPA (Hectopascal)</string>
    <string name="install_meets_prompt">Please install Google MEETS first!</string>
    <string name="install_teams_prompt">Please install Microsoft TEAMs first!</string>
    <string name="install_skype_prompt">Please install Skype first!</string>
    <string name="install_zoom_prompt">Please install Zoom first!</string>
    <string name="change_password_title">Change Password</string>
    <string name="change_language_title">Change App Language</string>
    <string name="change_theme_title">Change Theme</string>
    <string name="add_overtime_title">Add Overtime Hours</string>
    <string name="light_mode_radio_button">Light Mode</string>
    <string name="dark_mode_radio_button">Dark Mode</string>
</resources>