<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/worksite_recycler_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/RowLightAndDark">

    <TextView
        android:id="@+id/fixHSE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:text="@string/fixed_hseLink"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txt_siteId_worksite"
        app:layout_constraintTop_toBottomOf="@+id/btn_masterpoint_worksite" />

    <TextView
        android:id="@+id/txt_siteId_worksite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/fixed_siteID"
        android:textColor="@color/textColorPrimary"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txt_projectId_worksite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_projectId_worksite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/fixed_projectID"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_location_worksite"
        app:layout_constraintStart_toEndOf="@+id/txt_siteId_worksite"
        app:layout_constraintTop_toTopOf="@+id/txt_siteId_worksite" />

    <TextView
        android:id="@+id/txt_location_worksite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/fixed_location"
        android:textSize="16sp"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/txt_operationHours_worksite"
        app:layout_constraintStart_toEndOf="@+id/txt_projectId_worksite"
        app:layout_constraintTop_toTopOf="@+id/txt_siteId_worksite" />

    <Button
        android:id="@+id/btn_masterpoint_worksite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fixed_masterPoint"
        android:textColor="@color/textColorPrimary"
        android:background="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="@+id/fixHSE"
        app:layout_constraintTop_toBottomOf="@+id/txt_siteName_worksiteRow" />

    <TextView
        android:id="@+id/txt_HSElink_worksite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/textColorPrimary"
        android:autoLink="web"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fixHSE"
        app:layout_constraintTop_toTopOf="@+id/fixHSE" />

    <TextView
        android:id="@+id/txt_operationHours_worksite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/fixed_operationHours"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_location_worksite"
        app:layout_constraintTop_toTopOf="@+id/txt_siteId_worksite" />

    <TextView
        android:id="@+id/fix_siteName_worksiteRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/fixed_siteName"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/fixHSE"
        app:layout_constraintTop_toBottomOf="@+id/txt_location_worksite" />

    <TextView
        android:id="@+id/txt_siteName_worksiteRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fix_siteName_worksiteRow"
        app:layout_constraintTop_toTopOf="@+id/fix_siteName_worksiteRow" />

</androidx.constraintlayout.widget.ConstraintLayout>