<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.UserInfoActivity"
    android:orientation="vertical"
    >

    <TableLayout
        android:id="@+id/userInfoInputTableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/seerem_logo_colour"
            android:gravity="center">

            <TextView
                android:id="@+id/userInfoHeader"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:paddingStart="20dip"
                android:paddingLeft="20dip"
                android:text="@string/user_info_header"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/name_entry"
                android:textColor="@color/seerem_logo_colour"
                android:textSize="24dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center">

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="@color/seerem_logo_colour"
                android:clickable="false"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/first_name_entry"
                android:inputType="none"
                android:paddingStart="20dip"
                android:paddingLeft="20dip"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="@color/seerem_logo_colour"
                android:clickable="false"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/last_name_entry"
                android:inputType="none"
                android:paddingStart="20dip"
                android:paddingLeft="20dip"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="sans-serif-smallcaps"
                android:paddingStart="20dip"
                android:paddingLeft="20dip"
                android:text="@string/id_entry"
                android:textColor="@color/seerem_logo_colour"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/seerem_logo_colour"
                android:clickable="false"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:inputType="none"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="sans-serif-smallcaps"
                android:paddingStart="20dip"
                android:paddingLeft="20dip"
                android:text="@string/medical_considerations_entry"
                android:textColor="@color/seerem_logo_colour"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editMedical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/seerem_logo_colour"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:inputType="textPersonName"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:fontFamily="sans-serif-smallcaps"
                android:paddingStart="20dip"
                android:paddingLeft="20dip"
                android:text="@string/emergency_contact_entry"
                android:textColor="@color/seerem_logo_colour"
                android:textSize="22sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioContactType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/seerem_logo_colour"
                android:paddingRight="20dip"
                android:textColor="@color/seerem_logo_colour">

                <RadioButton
                    android:id="@+id/radio_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/emergency_contact_type_family"
                    android:textColor="@color/seerem_logo_colour"
                    android:textSize="20dp" />


                <RadioButton
                    android:id="@+id/radio_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/emergency_contact_type_friend"
                    android:textColor="@color/seerem_logo_colour"
                    android:textSize="20dp" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <TableRow
        android:id="@+id/contactNameEntry"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center">

        <EditText
            android:id="@+id/editEmergencyNumber"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="@color/seerem_logo_colour"
            android:fontFamily="sans-serif-smallcaps"
            android:hint="@string/emergency_contact_number_entryy"
            android:inputType="number"
            android:paddingStart="20dip"
            android:paddingLeft="20dip"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editEmergencyContactName"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="@color/seerem_logo_colour"
            android:fontFamily="sans-serif-smallcaps"
            android:hint="@string/emergency_contact_name_entry"
            android:inputType="textPersonName"
            android:paddingStart="20dip"
            android:paddingLeft="20dp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold" />

    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/seerem_logo_colour"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUIPreferences"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/go_to_ui_preferences_button"
            android:textColor="@color/seerem_logo_colour"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSaveUserInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/save_user_info_button"
            android:textColor="@color/seerem_logo_colour"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSiteMap"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/go_to_worksite"
            android:textColor="@color/seerem_logo_colour"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#A8A8A8"
        android:paddingTop="2dp"
        app:itemBackground="@color/seerem_logo_colour"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@color/white"
        app:menu="@menu/menu_navigation_bar" />

</LinearLayout>