<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.ChangeThemeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/back_and_save_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ActionBarTitleIconConsistentColor"
        app:title="@string/change_theme_title" />

    <RadioGroup
        android:id="@+id/radioTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:backgroundTint="@color/textColorPrimary"
        android:textColor="@color/textColorPrimary">


        <RadioButton
            android:id="@+id/radio_button_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/light_mode_radio_button"
            android:textColor="@color/textColorPrimary"
            android:textSize="40dp" />

        <RadioButton
            android:id="@+id/radio_button_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/dark_mode_radio_button"
            android:textColor="@color/textColorPrimary"
            android:textSize="40dp" />
    </RadioGroup>
</LinearLayout>